[package]
name = "playhead"
version = "0.2.0"
authors = ["bilal <skillzaa.com@gmail.com>"]
edition = "2018"
description = "A small and simple counter utility"
repository = "https://github.com/skillzaa/play_head"
homepage = "https://github.com/skillzaa/play_head"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
